# Savant

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  PREPARE_RELEASE.md  README.md  healthcheck.sh  issue857.py  issue857.sh  pyproject.toml
.devcontainer/l4t/: devcontainer.json
.devcontainer/x86/: devcontainer.json
.github/workflows/: build-docker-latest.yml  build-docker-release.yml  build-docker-test.yml  build-docker.yml  build-docs.yml  build-package-release.yml  build-package.yml  main.yml  test.yml
adapters/: requirements-gst.txt  requirements-py.txt  requirements.txt
adapters/python/: shared.py
adapters/shared/: thread.py  utils.sh
benchmarks/: benchmark.py  run_benchmarks.sh
docker/: Dockerfile.adapters-gstreamer  Dockerfile.adapters-py  Dockerfile.deepstream  Dockerfile.deepstream-l4t  Dockerfile.deepstream-l4t-6.0.1  Dockerfile.deepstream-opencv  Dockerfile.deepstream-opencv-l4t  Dockerfile.deepstream-opencv-lt4  Dockerfile.dgpu  Dockerfile.pyds  Dockerfile.test
docs/: README.md  adapters.md  architecture.md  performance.md  publications-samples.md  requirements.txt  runtime-configuration.md
docs/source/: conf.py  gh_script.py  index.rst
gst_plugins/python/: avro_video_decode_bin.py  avro_video_demux.py  frame_tag_filter.py  frame_tag_filter_common.py  frame_tag_funnel.py  ingress_converter.py  ingress_converter_bin.py  logger.py  pyfunc.py  pyfunc_common.py  savant_rs_add_frames.py  savant_rs_video_decode_bin.py  savant_rs_video_demux.py  savant_rs_video_demux_common.py  sync_io_wrapper_bin.py  zeromq_properties.py  zeromq_source_bin.py  zeromq_src.py
libs/: download-savant-rs-capi.sh
libs/gstsavantframemeta/: CMakeLists.txt  pyproject.toml  requirements.txt  setup.py
libs/gstsavantframemeta/gstsavantframemeta/: CMakeLists.txt
libs/gstsavantframemeta/gstsavantframemeta/include/: gstsavantbatchmeta.h  gstsavantframemeta.h  nvbufsurface_generator.h  nvdssavantframemeta.h  savantnvprobes.h  savantrsprobes.h
libs/gstsavantframemeta/gstsavantframemeta/src/: gstsavantbatchmeta.cpp  gstsavantframemeta.cpp  nvbufsurface_generator.cpp  nvdssavantframemeta.cpp  savantnvprobes.cpp  savantrsprobes.cpp
libs/gstsavantframemeta/pygstsavantframemeta/: __init__.py  pygstsavantframemeta.cpp
libs/nvbufsurfacegenerator/: CMakeLists.txt  pyproject.toml  requirements.txt  setup.py
libs/nvbufsurfacegenerator/nvbufsurfacegenerator/: CMakeLists.txt
libs/nvbufsurfacegenerator/nvbufsurfacegenerator/include/: nvbufsurface_generator.h
libs/nvbufsurfacegenerator/nvbufsurfacegenerator/src/: nvbufsurface_generator.cpp
libs/nvbufsurfacegenerator/pynvbufsurfacegenerator/: __init__.py  pygstsavantframemeta.cpp
libs/pykvssdk/: CMakeLists.txt  requirements.txt  setup.py
libs/pykvssdk/pykvssdk/: __init__.py  client_callback_provider.h  consts.h  frame_buffer.cpp  frame_buffer.h  kvs_wrapper.cpp  kvs_wrapper.h  logger.h  producer_state.h  pykvssink.cpp  stream_callback_provider.cpp  stream_callback_provider.h  video_frame.h
libs/savantboost/: CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
libs/savantboost/pysavantboost/: __init__.py  custom_preprocessing.py
libs/savantboost/pysavantboost/include/: b_rbbox_meta.h  nms.h  nvsurfaceptr.h  preprocessing.h  pydocumentation.h  pysavantboost.h
libs/savantboost/pysavantboost/src/: b_rbbox_meta.cpp  nms.cpp  nvsurfaceptr.cpp  preprocessing.cpp  pysavantboost.cpp
libs/savantboost/savantboost/: CMakeLists.txt  nvdsparserapid.cpp  nvdsparserapid.h  types.h
libs/savantboost/savantboost/bbox/: rotatebbox.cpp  rotatebbox.h
libs/savantboost/savantboost/cuda/: cudaCrop.cu  cudaCrop.h  cuda_utils.h  helpers.h  nms_iou.cu  nms_iou.h
libs/savantboost/savantboost/deepstream/: dsrbbox_meta.cpp  dsrbbox_meta.h  image.cpp  image.h  nvsurfaceptr.cpp  nvsurfaceptr.h  preprocessing.cpp  preprocessing.h  user_meta_type.h
requirements/: base.txt  deepstream-l4t-6.0.1.txt  deepstream-l4t.txt  deepstream.txt  dev.txt  ext.txt  extra.txt  samples.txt  savant-rs.txt
samples/: README.md
samples/age_gender_recognition/: README.md  age_gender_converter.py  age_gender_preproc.py  docker-compose.l4t.yml  docker-compose.x86.yml  module.yml  module_performance.yml  overlay.py  run_perf.sh  selector.py  smoothed_counter.py  smoothing.py
samples/animegan/: .env  README.md  animegan_converter.py  docker-compose.x86.yml  frame_replacer.py  module.yml  run.sh  video_tile.py
samples/area_object_counting/: README.md  area_config.yml  docker-compose.l4t.yml  docker-compose.x86.yml  module.yml  object_counting.py  overlay.py
samples/assets/: run_perf_helper.sh
samples/auxiliary_streams/: README.md  demo.yml  docker-compose.l4t.yml  docker-compose.x86.yml  multiple_resolutions.py
samples/background_remover/: README.md  bgremover.py  demo.yml  demo_performance.yml  docker-compose.l4t.yml  docker-compose.x86.yml
samples/buffer_adapter/: README.md  demo.yml  docker-compose.l4t.yml  docker-compose.x86.yml  lag_generator.py  prometheus.yml
samples/bypass_model/: README.md  demo.yml  docker-compose.l4t.yml  docker-compose.x86.yml  example.py  export.py
samples/conditional_video_processing/: README.md  conditional_video_processing.py  demo.yml  demo_performance.yml  docker-compose.l4t.yml  docker-compose.x86.yml  run_perf.sh  source-switch.sh
samples/deepstream_test2/: dstest2_sgie1_config.txt  dstest2_sgie2_config.txt  module-etlt-config.yml  module-full-savant-config.yml  module.yml
samples/face_reid/: .gitignore  README.md  docker-compose.l4t.yml  docker-compose.x86.yml  face_preproc.py  index_builder.py  (+7 more)
savant/: VERSION  __init__.py  welcome.py
scripts/: build_docker_matrix.py  common.py  run_bridge.py  run_module.py  run_perf.py  run_sink.py  run_source.py  uri-input.py
tests/: test_extra.py  test_memory_repr.py  test_onnxruntime.py  test_torch2trt.py
utils/: build_extra_packages.sh  build_pycuda.sh  build_torch2trt.sh  check-environment-compatible  download_savant_rs.py  download_savant_rs_artifacts.py  install_savant_rs.py  prepare_release.sh
(+716 files in other folders)
